Main page Gif downscaling

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="col-lg-10 about-bordered">
                     <h2>About me</h2>
                     <p class="lead mb-5">
-                        Hello there, I am David. I am a spaniard programmer and I have been developing videogames since my teenager days. 
+                        Hello there, I am David, also known as Apagon on the Internet. I am a spaniard programmer and I have been developing videogames since my teenager days. 
                         I have been always more inclined to coding, but I can also defend myself in 2D sprite design and editing or 3D modeling. 
                         In this page, you can see my featured works and other projects where I have worked with other developers.
                     </p>
