--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     <header class="masthead d-flex align-items-center">
         <div class="container px-4 px-lg-5 text-center">
             <img src="assets/img/header_icon.png" > 
-            <h1 class="mb-1">David Rojo Martín</h1>
+            <h1 class="mb-1">Jesús David Rojo Martín</h1>
             <h3 class="mb-5"><em>Game Programmer</em></h3>
             <div class="container px-4 px-lg-5">
                 <ul class="list-inline mb-5">
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="#!">
+                        <a class="social-link rounded-circle text-white mr-3" href="mailto:drojomartin@gmail.com">
                             <i class="icon-envelope"></i>
                         </a>
                     </li>
@@ -88,8 +88,8 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white" href="https://github.com/jdrojo2018">
-                            <i class="icon-social-github"></i>
+                        <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/jesús-david-rojo-martín-76b640a9">
+                            <i class="fab fa-linkedin"></i>
                         </a>
                     </li>
                 </ul>
