Added Mirror War project page

--- a/index.html
+++ b/index.html
@@ -121,6 +121,23 @@
                 <h2 class="mb-5 light-text">Featured Projects</h2>
             </div>
             <div class="row gx-0">
+                <!-- Mirror War -->
+                <div class="col-lg-6">
+                    <a class="portfolio-item" href='page_mirror_war.html'>
+                        <div class="caption">
+                            <div class="caption-content">
+                                <div class="h2">Mirror War</div>
+                                <p class="mb-0">Send troops to battle. Defeat the opposing leader.</p>
+                                <div class="badges-projects">
+                                    <span class="badge bg-light text-dark badge-project">Unity</span>
+                                    <span class="badge bg-light text-dark badge-project">WebGL</span>
+                                    <span class="badge bg-light text-dark badge-project">C#</span>
+                                </div>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="assets/img/main_page/ezgif-2-90640310f6.gif" alt="..." />
+                    </a>
+                </div>
                 <!-- Robot Arena Prototype -->
                 <div class="col-lg-6">
                     <a class="portfolio-item" href="page_robot_arena.html">
