--- a/index.html
+++ b/index.html
@@ -53,18 +53,11 @@
                     <span>Main projects</span>
                 </a>
             </li>
-            <!--Main projects-->
+            <!--Minor projects-->
             <li class="sidebar-nav-item">
                 <a href="#secondary">
                     <i class="fa fa-th fa-fw me-3" aria-hidden="true"></i>
                     <span>Minor projects</span>
-                </a>
-            </li>
-            <!--Minor projects-->
-            <li class="sidebar-nav-item">
-                <a href="#contact">
-                    <i class="fa fa-envelope fa-fw me-3" aria-hidden="true"></i>
-                    <span> Contact</span>
                 </a>
             </li>
         </ul>
@@ -364,7 +357,7 @@
         </div>
     </section>
     <!-- Footer-->
-    <footer class="footer text-center bg-dark" id="contact">
+    <footer class="footer text-center bg-dark">
         <p class="text-muted small mb-0">&copy; 2022 Jesús David with <a href="https://getbootstrap.com">Bootstrap</a></p>
     </footer>
     <!-- Scroll to Top Button-->
