Added Catsification project page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -11,9 +12,11 @@
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Simple line icons-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css"
+        rel="stylesheet" />
     <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic"
+        rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <!-- Bootstrap core JS-->
@@ -65,7 +68,7 @@
     <!-- Header-->
     <header class="masthead d-flex align-items-center">
         <div class="container px-4 px-lg-5 text-center">
-            <img src="assets/img/header_icon.png" > 
+            <img src="assets/img/header_icon.png">
             <h1 class="mb-1">Jesús David Rojo Martín</h1>
             <h3 class="mb-5"><em>Game Programmer</em></h3>
             <div class="container px-4 px-lg-5">
@@ -81,7 +84,8 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a class="social-link rounded-circle text-white mr-3" href="https://www.linkedin.com/in/jesús-david-rojo-martín-76b640a9">
+                        <a class="social-link rounded-circle text-white mr-3"
+                            href="https://www.linkedin.com/in/jesús-david-rojo-martín-76b640a9">
                             <i class="fab fa-linkedin"></i>
                         </a>
                     </li>
@@ -96,9 +100,12 @@
                 <div class="col-lg-10 about-bordered">
                     <h2>About me</h2>
                     <p class="lead mb-5">
-                        Hello there, I am David, also known as Apagon on the Internet. I am a spaniard programmer and I have been developing videogames since my teenager days. 
-                        I have been always more inclined to coding, but I can also defend myself in 2D sprite design and editing or 3D modeling. 
-                        In this page, you can see my featured works and other projects where I have worked with other developers.
+                        Hello there, I am David, also known as Apagon on the Internet. I am a spaniard programmer and I
+                        have been developing videogames since my teenager days.
+                        I have been always more inclined to coding, but I can also defend myself in 2D sprite design and
+                        editing or 3D modeling.
+                        In this page, you can see my featured works and other projects where I have worked with other
+                        developers.
                     </p>
                     <p class="lead mb-5">
                         Feel free to contact me at <span class="fst-italic"> drojomartin@gmail.com</span>
@@ -226,6 +233,22 @@
                 <h2 class="mb-5">Minor Projects</h2>
             </div>
             <div class="row gx-0">
+                <!-- Catsification -->
+                <div class="col-lg-4">
+                    <a class="portfolio-item" href="page_catsification.html">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <div class="h2">Catsification</div>
+                                <p class="mb-0">Drag and drop cats to their baskets</p>
+                                <div class="badges-projects">
+                                    <span class="badge bg-light text-dark badge-project">Unity</span>
+                                    <span class="badge bg-light text-dark badge-project">C#</span>
+                                </div>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="assets/img/main_page/catsification_gameplay_big.gif" alt=" ..." />
+                    </a>
+                </div>
                 <!-- Super Creature Tamagotchi! -->
                 <div class="col-lg-4">
                     <a class="portfolio-item" href="page_super_creature_tamagotchi.html">
@@ -358,9 +381,11 @@
     </section>
     <!-- Footer-->
     <footer class="footer text-center bg-dark">
-        <p class="text-muted small mb-0">&copy; 2022 Jesús David with <a href="https://getbootstrap.com">Bootstrap</a></p>
+        <p class="text-muted small mb-0">&copy; 2022 Jesús David with <a href="https://getbootstrap.com">Bootstrap</a>
+        </p>
     </footer>
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded" href="#page-top"><i class="fas fa-angle-up"></i></a>
 </body>
+
 </html>
