--- a/index.html
+++ b/index.html
@@ -233,6 +233,22 @@
                 <h2 class="mb-5">Minor Projects</h2>
             </div>
             <div class="row gx-0">
+                <!-- Skyward Blast -->
+                <div class="col-lg-4">
+                    <a class="portfolio-item" href="page_skyward_blast.html">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <div class="h2">Skyward Blast</div>
+                                <p class="mb-0">3D Rail shooter for WebGL</p>
+                                <div class="badges-projects">
+                                    <span class="badge bg-light text-dark badge-project">Unity</span>
+                                    <span class="badge bg-light text-dark badge-project">C#</span>
+                                </div>
+                            </div>
+                        </div>
+                        <img class="img-fluid" src="assets/img/main_page/skyward_blast.gif" alt=" ..." />
+                    </a>
+                </div>
                 <!-- Catsification -->
                 <div class="col-lg-4">
                     <a class="portfolio-item" href="page_catsification.html">
