Skyward blast minor text correction

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         <div class="caption">
                             <div class="caption-content">
                                 <div class="h2">Skyward Blast</div>
-                                <p class="mb-0">3D Rail shooter for WebGL</p>
+                                <p class="mb-0">3D Rail shooter for WebGL and Windows</p>
                                 <div class="badges-projects">
                                     <span class="badge bg-light text-dark badge-project">Unity</span>
                                     <span class="badge bg-light text-dark badge-project">C#</span>
